<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.Registrar_Admin"
    >

    <RelativeLayout
        android:id="@+id/toolbarRLAdminR"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">
        
        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ImageButton>

        <TextView
            android:id="@+id/toolbarTituloR"
            android:text="@string/TxtRegistroAdmin"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        
        <View
            android:layout_alignParentBottom="true"
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp">
        </View>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/toolbarRLAdminR"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Nombres-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">

                <EditText
                    android:id="@+id/Et_nombres_admin"
                    android:hint="@string/Et_nombres_admin"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Et_email_admin"
                    android:hint="@string/Et_email_admin"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Et_password_admin"
                    android:hint="@string/Et_password_admin"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Repetir el password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Et_R_password_admin"
                    android:inputType="textPassword"
                    android:hint="@string/Et_R_password_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Boton registro del administrador-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_registrar_admin"
                android:text="@string/Btn_registrar_admin"
                android:textAllCaps="true"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.google.android.material.button.MaterialButton>

            <!--Ya tengo cuenta-->
            <TextView
                android:id="@+id/Txt_tengo_cuenta"
                android:text="@string/Txt_tengo_cuenta"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

</RelativeLayout>