<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.ActualizarLibro">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRlActualizar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ImageButton>

        <TextView
            android:text="@string/Txt_actualizar_libro"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <View
            android:layout_alignParentBottom="true"
            android:background="#ccc"
            android:layout_width="match_parent"
            android:layout_height="1dp">
        </View>
    </RelativeLayout>
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/IvActualizarL"
        android:src="@drawable/actualizar_info_libro"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/toolbarRlActualizar">
    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/IvActualizarL">

        <!--Titulo del libro-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/Et_titulo_libro"
                android:hint="@string/Et_titulo_libro"
                android:drawableStart="@drawable/ic_pdf"
                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Descripción-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/Et_descripcion_libro"
                android:hint="@string/Et_descripcion_libro"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_pdf"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Categoria seleccionada-->
        <TextView
            android:id="@+id/Tv_categoria_libro"
            android:hint="@string/Tv_categoria_libro"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:background="@drawable/forma_editext"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_categoria"
            android:drawablePadding="10dp"
            app:drawableEndCompat="@drawable/ic_abajo">
        </TextView>

        <!--Actualizar la información-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_actualizar_libro"
            android:text="@string/Btn_actualizar_libro"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </com.google.android.material.button.MaterialButton>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>